// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Star Rating component will correctly display a rating of 1 stars 1`] = `
"<div class="flex gap-1.5 text-sm place-items-baseline">
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="fa-layers text-grey-500"><i class="far fa-star"></i></span></div>
  <div><span class="fa-layers text-grey-500"><i class="far fa-star"></i></span></div>
  <div><span class="fa-layers text-grey-500"><i class="far fa-star"></i></span></div>
  <div><span class="fa-layers text-grey-500"><i class="far fa-star"></i></span></div><span>1.00</span>
</div>"
`;

exports[`Star Rating component will correctly display a rating of 1.5 stars 1`] = `
"<div class="flex gap-1.5 text-sm place-items-baseline">
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="fa-layers"><i class="far fa-star text-grey-500"></i><i class="fas fa-star-half text-warn-hover"></i></span></div>
  <div><span class="fa-layers text-grey-500"><i class="far fa-star"></i></span></div>
  <div><span class="fa-layers text-grey-500"><i class="far fa-star"></i></span></div>
  <div><span class="fa-layers text-grey-500"><i class="far fa-star"></i></span></div><span>1.50</span>
</div>"
`;

exports[`Star Rating component will correctly display a rating of 1.25 stars 1`] = `
"<div class="flex gap-1.5 text-sm place-items-baseline">
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="fa-layers text-grey-500"><i class="far fa-star"></i></span></div>
  <div><span class="fa-layers text-grey-500"><i class="far fa-star"></i></span></div>
  <div><span class="fa-layers text-grey-500"><i class="far fa-star"></i></span></div>
  <div><span class="fa-layers text-grey-500"><i class="far fa-star"></i></span></div><span>1.25</span>
</div>"
`;

exports[`Star Rating component will correctly display a rating of 1.75 stars 1`] = `
"<div class="flex gap-1.5 text-sm place-items-baseline">
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="fa-layers"><i class="far fa-star text-grey-500"></i><i class="fas fa-star-half text-warn-hover"></i></span></div>
  <div><span class="fa-layers text-grey-500"><i class="far fa-star"></i></span></div>
  <div><span class="fa-layers text-grey-500"><i class="far fa-star"></i></span></div>
  <div><span class="fa-layers text-grey-500"><i class="far fa-star"></i></span></div><span>1.75</span>
</div>"
`;

exports[`Star Rating component will correctly display a rating of 2 stars 1`] = `
"<div class="flex gap-1.5 text-sm place-items-baseline">
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="fa-layers text-grey-500"><i class="far fa-star"></i></span></div>
  <div><span class="fa-layers text-grey-500"><i class="far fa-star"></i></span></div>
  <div><span class="fa-layers text-grey-500"><i class="far fa-star"></i></span></div><span>2.00</span>
</div>"
`;

exports[`Star Rating component will correctly display a rating of 2.5 stars 1`] = `
"<div class="flex gap-1.5 text-sm place-items-baseline">
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="fa-layers"><i class="far fa-star text-grey-500"></i><i class="fas fa-star-half text-warn-hover"></i></span></div>
  <div><span class="fa-layers text-grey-500"><i class="far fa-star"></i></span></div>
  <div><span class="fa-layers text-grey-500"><i class="far fa-star"></i></span></div><span>2.50</span>
</div>"
`;

exports[`Star Rating component will correctly display a rating of 2.25 stars 1`] = `
"<div class="flex gap-1.5 text-sm place-items-baseline">
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="fa-layers text-grey-500"><i class="far fa-star"></i></span></div>
  <div><span class="fa-layers text-grey-500"><i class="far fa-star"></i></span></div>
  <div><span class="fa-layers text-grey-500"><i class="far fa-star"></i></span></div><span>2.25</span>
</div>"
`;

exports[`Star Rating component will correctly display a rating of 2.75 stars 1`] = `
"<div class="flex gap-1.5 text-sm place-items-baseline">
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="fa-layers"><i class="far fa-star text-grey-500"></i><i class="fas fa-star-half text-warn-hover"></i></span></div>
  <div><span class="fa-layers text-grey-500"><i class="far fa-star"></i></span></div>
  <div><span class="fa-layers text-grey-500"><i class="far fa-star"></i></span></div><span>2.75</span>
</div>"
`;

exports[`Star Rating component will correctly display a rating of 3 stars 1`] = `
"<div class="flex gap-1.5 text-sm place-items-baseline">
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="fa-layers text-grey-500"><i class="far fa-star"></i></span></div>
  <div><span class="fa-layers text-grey-500"><i class="far fa-star"></i></span></div><span>3.00</span>
</div>"
`;

exports[`Star Rating component will correctly display a rating of 3.5 stars 1`] = `
"<div class="flex gap-1.5 text-sm place-items-baseline">
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="fa-layers"><i class="far fa-star text-grey-500"></i><i class="fas fa-star-half text-warn-hover"></i></span></div>
  <div><span class="fa-layers text-grey-500"><i class="far fa-star"></i></span></div><span>3.50</span>
</div>"
`;

exports[`Star Rating component will correctly display a rating of 3.25 stars 1`] = `
"<div class="flex gap-1.5 text-sm place-items-baseline">
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="fa-layers text-grey-500"><i class="far fa-star"></i></span></div>
  <div><span class="fa-layers text-grey-500"><i class="far fa-star"></i></span></div><span>3.25</span>
</div>"
`;

exports[`Star Rating component will correctly display a rating of 3.75 stars 1`] = `
"<div class="flex gap-1.5 text-sm place-items-baseline">
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="fa-layers"><i class="far fa-star text-grey-500"></i><i class="fas fa-star-half text-warn-hover"></i></span></div>
  <div><span class="fa-layers text-grey-500"><i class="far fa-star"></i></span></div><span>3.75</span>
</div>"
`;

exports[`Star Rating component will correctly display a rating of 4 stars 1`] = `
"<div class="flex gap-1.5 text-sm place-items-baseline">
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="fa-layers text-grey-500"><i class="far fa-star"></i></span></div><span>4.00</span>
</div>"
`;

exports[`Star Rating component will correctly display a rating of 4.5 stars 1`] = `
"<div class="flex gap-1.5 text-sm place-items-baseline">
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="fa-layers"><i class="far fa-star text-grey-500"></i><i class="fas fa-star-half text-warn-hover"></i></span></div><span>4.50</span>
</div>"
`;

exports[`Star Rating component will correctly display a rating of 4.25 stars 1`] = `
"<div class="flex gap-1.5 text-sm place-items-baseline">
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="fa-layers text-grey-500"><i class="far fa-star"></i></span></div><span>4.25</span>
</div>"
`;

exports[`Star Rating component will correctly display a rating of 4.75 stars 1`] = `
"<div class="flex gap-1.5 text-sm place-items-baseline">
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="fa-layers"><i class="far fa-star text-grey-500"></i><i class="fas fa-star-half text-warn-hover"></i></span></div><span>4.75</span>
</div>"
`;

exports[`Star Rating component will correctly display a rating of 5 stars 1`] = `
"<div class="flex gap-1.5 text-sm place-items-baseline">
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div>
  <div><span class="text-warn-hover fa-layers"><i class="fas fa-star"></i></span></div><span>5.00</span>
</div>"
`;
